--- a/Action_Potentials_Website_Self/projects-other.html
+++ b/Action_Potentials_Website_Self/projects-other.html
@@ -167,6 +167,38 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Other Projects</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Under this section, you may find interesting STEM-related projects. Whether it is a student led STEM outreach, or a mini-tournament of sorts, these projects are very different from traditional research, both in terms of
+                                    its contents and its format. Check them out and start appreciate the quality of work by high school students.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/intake.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
