--- a/Action_Potentials_Website_Self/projects-studies.html
+++ b/Action_Potentials_Website_Self/projects-studies.html
@@ -189,7 +189,7 @@
                     <div class="image-column col-lg-4 col-md-12 col-sm-12">
                         <div class="inner-column">
                             <div class="image">
-                                <img src="images/intake.JPG" alt="" />
+                                <img src="images/omni.JPG" alt="" />
                             </div>
                         </div>
                     </div>
