--- a/Action_Potentials_Website_Self/services-publishing.html
+++ b/Action_Potentials_Website_Self/services-publishing.html
@@ -177,7 +177,9 @@
                         <div class="inner-column">
                             <h2>Publish on our Website</h2>
                             <div class="text">
-                                <p>At Action Potentials, we encourage high students like us to pursue research in their desired fields without the barriers of educational qualification. Therefore, we offer to publish your research into
+                                <p>At Action Potentials, we encourage high students like us to pursue research in their desired fields without the barriers of educational qualification. Therefore, we offer to publish your research online and free for everyone
+                                    else to see. Whether it is a study that resulted to null result or if it discovered some amazing insight, we would like to showcase your work via the power of internet. Submit your work now and recieve acknowledgement
+                                    for your amazing project.
                                 </p>
                             </div>
                         </div>
@@ -187,7 +189,7 @@
                     <div class="image-column col-lg-4 col-md-12 col-sm-12">
                         <div class="inner-column">
                             <div class="image">
-                                <img src="images/compat drill.JPG" alt="" />
+                                <img src="images/blueprint1.jpg" alt="" />
                             </div>
                         </div>
                     </div>
@@ -198,10 +200,64 @@
         <!-- End Story Section -->
 
         <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Catagories</h2>
+                <br>
+                <a href="projects-research.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
+                <a href="projects-studies.html" class="theme-btn btn-style-two "><span class="txt ">Studies</span></a>
+                <a href="projects-creative.html" class="theme-btn btn-style-two "><span class="txt ">Creative Projects</span></a>
+                <a href="projects-other.html" class="theme-btn btn-style-two "><span class="txt ">Other Projects</span></a>
+            </div>
+        </section>
+
+        <div class="auto-container ">
+            <br>
+            <h2>Requirements</h2>
+            <div class="row clearfix ">
+                <div class="content-column col-lg-12 col-md-12 col-sm-12 ">
+                    <div class="inner-column ">
+                    </div>
+                    <br>
+                    <div class="text">Here are the requirements for any prospective project that wish to be published at Action Potentials.</div>
+                    <div class="table ">
+                        <div class="text ">
+                            <br>
+                            <table width="100% ">
+                                <tr>
+                                    <th>Minimum Age of the Author</th>
+                                    <td>The age of the researcher should not be a barrier to publishing great contents.</td>
+                                </tr>
+                                <tr>
+                                    <th>Topics</th>
+                                    <td>Anything STEM-related will qualify. </td>
+                                </tr>
+                                <tr>
+                                    <th>Format</th>
+                                    <td>For traditional research projects and studies, they should be a pdf document. For other categories, it can be in any format, although the cumilative size of should be under 50Mb. </td>
+                                </tr>
+                                <tr>
+                                    <th>Parent Consent</th>
+                                    <td>Due to privacy concerns, this will be required from all minor authors. </td>
+                                </tr>
+                            </table>
+                            <br>
+                            <div class="text">Once we receive your submission, we will process it and reach a decision regarding its content qualifications. </div>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <!--End Requirment Detail-->
+
+        <!-- Call To Action Section -->
         <section class="call-to-action-section" style="background-image: url(images/crank.JPG) ">
             <div class="auto-container ">
                 <h2>Submission Portal</h2>
                 <div class="text">Interested in submitting your project to publish online? Click the following button to be redirected to our submission portal.</div>
+                <a href="contact.html" class="theme-btn btn-style-two "><span class="txt ">Contact us</span></a>
                 <a href="https://forms.gle/5UEJqqBGzmE6bfDa8" class="theme-btn btn-style-two "><span class="txt ">Redirect</span></a>
             </div>
         </section>
@@ -237,18 +293,6 @@
             </div>
         </section>
         <!-- End Story Section -->
-
-        <!-- Call To Action Section -->
-        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
-            <div class="auto-container ">
-                <h2>Catagories</h2>
-                <br>
-                <a href="projects-research.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
-                <a href="projects-studies.html" class="theme-btn btn-style-two "><span class="txt ">Studies</span></a>
-                <a href="projects-creative.html" class="theme-btn btn-style-two "><span class="txt ">Creative Projects</span></a>
-                <a href="projects-other.html" class="theme-btn btn-style-two "><span class="txt ">Other Projects</span></a>
-            </div>
-        </section>
 
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
