--- a/Action_Potentials_Website_Self/blog_how_to_make_anything.html
+++ b/Action_Potentials_Website_Self/blog_how_to_make_anything.html
@@ -187,11 +187,11 @@
                                         </ul>
                                     </div>
                                     <div class="lower-box">
-                                        <h3>How to make best home interior ourself</h3>
+                                        <h3>How to make anything?</h3>
                                         <div class="text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur velit esse cillum dolore Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                            <p>Today, we live in a world where factories make billions of products each day. As a consequence of industrialization, craftsmanship have been gradually overlooked and automated machines are reshaping the schemes
+                                                of many manufacturers. There is nothing wrong with automation; in fact, it accelerates the advancement of technology and globalization. However, people have began to grow more and more accostumed to these
+                                                services and traditional manufacture methods such as hand-crafted interiors in cars have been largely abandoned. </p>
                                             <h4>Two Column Text Sample</h4>
                                             <div class="row clearfix">
                                                 <div class="col-md-6 col-sm-6 col-xs-12">
