--- a/Action_Potentials_Website_Self/blog_how_to_make_anything.html
+++ b/Action_Potentials_Website_Self/blog_how_to_make_anything.html
@@ -189,21 +189,59 @@
                                     <div class="lower-box">
                                         <h3>How to make anything?</h3>
                                         <div class="text">
-                                            <p>Today, we live in a world where factories make billions of products each day. As a consequence of industrialization, craftsmanship have been gradually overlooked and automated machines are reshaping the schemes
-                                                of many manufacturers. There is nothing wrong with automation; in fact, it accelerates the advancement of technology and globalization. However, people have began to grow more and more accostumed to these
-                                                services and traditional manufacture methods such as hand-crafted interiors in cars have been largely abandoned. </p>
-                                            <h4>Two Column Text Sample</h4>
-                                            <div class="row clearfix">
-                                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-                                                </div>
-                                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-                                                </div>
+                                            <p>Today, we live in a world where factories make billions of products each day. As a consequence of industrialization, craftsmanship has been overlooked, while automated machines are reshaping the schemes of many
+                                                manufacturers. There is nothing wrong with automation; in fact, it accelerates the advancement of technology and globalization. However, people have begun to grow more and more accustomed to these services,
+                                                and traditional manufacturing methods such as hand-crafted interiors in cars have been largely abandoned. This abandonment is understandable. Although hand-crafted products may be of higher quality, this
+                                                process is extremely time-consuming, costly to employers, and limits the potential revenue. However, what is lost through this process is our ability to invent and build things by hand. In laymen's terms,
+                                                we have become less and less crafty. </p>
+                                            <p>I spend the majority of my childhood trying to figure out how everything works. Just a few days ago, I took apart the cooling vent of my room's ceiling fan and yet to put it back together. Now, as a consequence,
+                                                I must scramble to put it back together before the weather become a furnace again. From fiddling around with a screwdriver to taking apart fridges and microwaves, maybe it is a headache for my parents, but
+                                                I learned a lot of things from doing so - something that I may never learn through traditional methods. </p>
+                                            <p>Today, people are less and less practical. You can't blame anyone for that - it's just machines are taking over these tasks. However, as the practicality of people decreases, tutorials that teaches you to become
+                                                more practical astronomically increase. Today, browsing through search engines, you may easily find the tutorial for almost everything. So, from an engineer's pragmatic perspective, here are some tips and
+                                                tricks to become more practical. </p>
+                                            <br>
+                                            <b>Tip #1: Look into how things work.</b>
+                                            <p>As I have mentioned, I grew up while taking things apart. I still do that, and I am sure that my parents will feel relieved when I move out and stop doing so. Therefore, <i>don't do that!</i> However, by using
+                                                the power of the internet, you can find millions if not billions of articles and videos to learn how things work and why they work that way. </p>
+                                            <p>When I worked on my IB Personal Project where I built a go-kart, I remember that <a href="https://www.howstuffworks.com/"><i>How Stuff Works</i></a> is a comprehensive website that dissects the underlining mechanisms
+                                                of many products and helped me massively throughout the duration of my project. You should look into similar sources. It will help you to get into the mindset of an engineer - without <i>annoying your parents.</i></p>
+                                            <br>
+                                            <b>Tip #2: Get your hands dirty.</b>
+                                            <p>The best way to become more practical is <i>to actually make things</i>. It is a lot of fun and will get you started in becoming a maker - a person who invents or manufactures products for commercial or personal
+                                                gain. Learn how to use a screwdriver the right way, try out some power tools, get familiar with the materials that you like working with - pretty soon, you will have a garage full of tools and a lot of home-improvement
+                                                projects lying around - given that your parents allow you to do so (<i>because mine certainly didn't</i>). </p>
+                                            <br>
+                                            <b>Tip #3: Try out computational tools.</b>
+                                            <p>Computer-aided design, computational three-dimensional simulation tools, generative design, topology optimization, computational fluid dynamics, finite element analysis... I can go on forever. Technological
+                                                advancements in the past few decades revolutionalized the way that engineers work. Today, when an engineer wants to make anything, the first thing that he/she/they will do is no longer taking up a pen and
+                                                draw a diagram - instead, they now use computer-aided design to model their ideas. After that, they will most likely run hundreds of simulations to check the functionality, efficiency, and structural integrity
+                                                of any ideas before prototyping them - more resourceful and more effective than the traditional engineering cycle - trial and error. </p>
+                                            <p>When things go wrong with your project, and they definitely will, you want to make sure that occurs on a computer rather than watching your school-funded, expensive brainchild burning up in flames because the
+                                                cooling vents are not efficient enough (and yes, that happened to me in real life).
+                                            </p>
+                                            <p>Nowadays, there are so many open-source software and free student/researcher licenses available. I suggest using the Autodesk ecosystem for its superior customer service and ANSYS for its state of the arts features.
+                                                Check them out, and start making things. </p>
+                                            <br>
+                                            <b>Tip #4: Measure twice, cut once. </b>
+                                            <p>This should go without saying - when you are spending hours upon hours on your computer to make it perfect, you want to execute it perfectly. For a carefully thought out project, a millimeter could mean that
+                                                the component will fit into the mechanism or it won't. </p>
+                                            <p>Always consider the margin of error when you want multiple components to fit together, especially using automated tools such as a 3D printer. </p>
+                                            <p>
+                                                Another tip is to always make sockets smaller than it need to be and make everything else slightly larger. You can always sand things down, but you cannot make it bigger.
+                                            </p>
+                                            <br>
+                                            <b>Tip #5: Use the engineering design cycle.</b>
+                                            <p>Getting into a habit is the best tool for self-improvements. Getting into the habit of using the engineering design cycle will diverge your attention from the meticulous details and help you to focus on the
+                                                large schemes of your project. Doing so, it will not necessarily yield the most beautiful design, <i>but it will work!</i></p>
+                                            <div class="eng-cycle">
+                                                <figure class="image"><img width="60%" src="images/engineering-design-cycle.jpeg" alt=""></figure>
                                             </div>
-                                            <p>Here is main text quis nostrud exercitation ullamco laboris nisi here is itealic text ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                                                nulla rure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <a href="#">here is link</a> cupidatat non proident, sunt in culpa qui officia deserunt
-                                                mollit anim id est laborum.</p>
+                                            <div class="text">Image from (https://blog.advancementcourses.com/articles/engineering-design-process/)</div>
+                                            <br>
+                                            <b>Tip #6: Rinse and repeat.</b>
+                                            <p>As I have mentioned before, habits are important. Repetition is crucial, because it will develop habits for you, unconsciously. For example, I have been following a particular schedule for sleeping, preping,
+                                                and exercising to an extent where I will automatically complete a task without consciously think about it. Therefore, to get used to being practical, <i>rinse and repeat is your best friend.</i> </p>
                                         </div>
                                     </div>
                                 </div>
