--- a/Action_Potentials_Website_Self/blog.html
+++ b/Action_Potentials_Website_Self/blog.html
@@ -295,6 +295,24 @@
                             </div>
                         </div>
 
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/foil.jpg" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topography Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                                                <a href="blog_foil_data_augmentation.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
