--- a/Action_Potentials_Website_Self/blog_gallery_items_scratch.html
+++ b/Action_Potentials_Website_Self/blog_gallery_items_scratch.html
@@ -51,3 +51,58 @@
         </figure>
     </div>
 </div>
+
+<!-- Gallery Item -->
+<div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+    <div class="inner-box">
+        <figure class="image-box">
+            <img src="images/career-communities.jpg" alt="">
+            <!--Overlay Box-->
+            <div class="overlay-box">
+                <div class="overlay-inner">
+                    <div class="content">
+                        <h3><a href="blog_where_to_find_learning_resources.html">Free Online Learning Resources</a></h3>
+                        <a href="blog_where_to_find_learning_resources.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                    </div>
+                </div>
+            </div>
+        </figure>
+    </div>
+</div>
+
+<!-- Gallery Item -->
+<div class="gallery-item mix all project col-lg-4 col-md-6 col-sm-12">
+    <div class="inner-box">
+        <figure class="image-box">
+            <img src="images/diagram 2.jpg" alt="">
+            <!--Overlay Box-->
+            <div class="overlay-box">
+                <div class="overlay-inner">
+                    <div class="content">
+                        <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
+</a></h3>
+                        <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                    </div>
+                </div>
+            </div>
+        </figure>
+    </div>
+</div>
+
+<!-- Gallery Item -->
+<div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+    <div class="inner-box">
+        <figure class="image-box">
+            <img src="images/foil.jpg" alt="">
+            <!--Overlay Box-->
+            <div class="overlay-box">
+                <div class="overlay-inner">
+                    <div class="content">
+                        <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topography Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                        <a href="blog_foil_data_augmentation.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                    </div>
+                </div>
+            </div>
+        </figure>
+    </div>
+</div>
