--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -575,15 +575,15 @@
                     <div class="news-block col-lg-4 col-md-6 col-sm-12 ">
                         <div class="inner-box wow fadeInRight " data-wow-delay="0ms " data-wow-duration="1500ms ">
                             <div class="image ">
-                                <a href="blog_how_to_make_anything.html "><img src="images/rim.jpg " alt=" " /></a>
+                                <a href="blog_foil_data_augmentation.html"><img src="images/foil.jpg " alt=" " /></a>
                             </div>
                             <div class="lower-content ">
                                 <ul class="post-meta ">
                                     <li>By <span>Grace Yu</span></li>
-                                    <li>Ideas</li>
+                                    <li>Computer-Aided Design</li>
                                 </ul>
-                                <h3><a href="blog_how_to_make_anything.html ">How to make anything?</a></h3>
-                                <a href="blog_how_to_make_anything.html " class="read-more ">Read more <span class="icon flaticon-right-arrow-1 "></span></a>
+                                <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topology Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                                <a href="blog_foil_data_augmentation.html" class="read-more ">Read more <span class="icon flaticon-right-arrow-1 "></span></a>
                             </div>
                         </div>
                     </div>
