--- a/Action_Potentials_Website_Self/blog-robotics.html
+++ b/Action_Potentials_Website_Self/blog-robotics.html
@@ -330,7 +330,7 @@
                         </div>
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all project CAD col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
                                     <img src="images/foil.jpg" alt="">
@@ -338,7 +338,7 @@
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topography Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                                                <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topology Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
                                                 <a href="blog_foil_data_augmentation.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
