--- a/Action_Potentials_Website_Self/blog_foil_data_augmentation.html
+++ b/Action_Potentials_Website_Self/blog_foil_data_augmentation.html
@@ -189,21 +189,37 @@
                                     <div class="lower-box">
                                         <h3>How can Generative Design, Topology Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</h3>
                                         <div class="text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur velit esse cillum dolore Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                                            <h4>Two Column Text Sample</h4>
-                                            <div class="row clearfix">
-                                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-                                                </div>
-                                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-                                                </div>
+                                            <p>Fluid mechanics and aerodynamics are two particularly computationally heavy fields. Engineers and aerodynamicists are often restricted in this field, usually by the limited resources for computationally simulating
+                                                their product's aero performance. In the past, engineers were restricted to testing prototypes in wind tunnels which were very unresourceful as aerodynamic components often required non-traditional manufacturing
+                                                processes and had to be made with uniquely optimized, nonpareil materials [1]. Today, with the technical advances in machine learning and computational neurology, a branch of software that abbreviates into
+                                                CFD (computational fluid dynamics) have generated an agglomeration of features to analyze the aerodynamic performance of components. Pragmatically, CFD opened up avenues for engineers to experiment with,
+                                                which led to more optimized products [2].
+                                            </p>
+                                            <div class="eng-cycle">
+                                                <figure class="image"><img width="100%" src="images/flowfield.jpg" alt=""></figure>
                                             </div>
-                                            <p>Here is main text quis nostrud exercitation ullamco laboris nisi here is itealic text ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                                                nulla rure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <a href="#">here is link</a> cupidatat non proident, sunt in culpa qui officia deserunt
-                                                mollit anim id est laborum.</p>
+                                            <div class="text">Image Source: sample flow field simulation of a NACA 16522 airfoil in <i>Javafoil</i>.</div>
+                                            <p>However, one restriction to CFD is its hardware dependence. CFD, much like other simulation software, requires immense computing power, multi-core performance, and peak processing speed to efficiently and effectively
+                                                solve for millions if not billions of data points for any geometry. Even with the state-of-the-art server, it may require hundreds of hours to analyze a moderately complicated model. Therefore, many products
+                                                can only qualify as aerodynamically adequate, including many name-brand sports cars. However, a new technology that incorporated machine learning, data augmentation, and descriptive analytics has potentially
+                                                solved this issue once and for all. This new technique is generative design.
+                                            </p>
+                                            <p>Generative design is a relatively new concept. It utilizes existing data to generate insight towards a specific problem, synthesizes user input parameters, contemplates and evaluates potential solutions that
+                                                may accommodate the geometrical constraints, outputs an array of optimized solutions, and explicates every meticulous decision to the users [3]. This underlying process of generative design is called topology
+                                                optimization, which is also the foundational principle of all optimization methods [4].</p>
+                                            <div class="eng-cycle">
+                                                <figure class="image"><img width="100%" src="images/vg_demo.png" alt=""></figure>
+                                            </div>
+                                            <div class="text">Image Source: sample vortex generator on airfoil's computational fluid dynamics analysis result in <i>SimScale</i> in terms of fluid velocity.</div>
+                                            <p>To tackle the issue of lack of aerodynamic optimization, this project takes on the concepts of using machine learning and data augmentation to map out possible aerofoil and vortex generator solutions to maximize
+                                                the drag-to-lift ratio. </p>
+                                            <p>Currently, this project is ongoing. Once the data generation process ends, another blog will be published on Action Potentials' website. The following blog will include the methodology of this research, alongside
+                                                some data visualization and reference charts.
+                                            </p>
+                                            <p><b>References</b></p>
+                                            <p>[1] G. F. Benedict, Nontraditional manufacturing processes. Boca Raton, FL: CRC Press, 1987. <br>[2] S. Shun and N. A. Ahmed, “Rapid prototyping of aerodynamics research models,” Appl. Mech. Mater., vol. 217–219,
+                                                pp. 2016–2025, 2012. <br>[3] E. Tyflopoulos, F. D. Tollnes, M. Steinert, and A. Olsen, “State of the art of generative design and topology optimization and potential research needs,” in NordDesign 2018,
+                                                2018. <br>[4] P. Gomes and R. Palacios, “Aerodynamic-driven topology optimization of compliant airfoils,” Struct. Multidiscipl. Optim., vol. 62, no. 4, pp. 2117–2130, 2020.</p>
                                         </div>
                                     </div>
                                 </div>
