--- a/Action_Potentials_Website_Self/blog_where_to_find_learning_resources.html
+++ b/Action_Potentials_Website_Self/blog_where_to_find_learning_resources.html
@@ -200,6 +200,7 @@
                                             </p>
                                             <p>If you are interested in coding, check out <a href="https://www.w3schools.com/">W3Schools</a>. It offers you documentation, interactive examples, and detailed explanations for almost every topic under or adjacent
                                                 to the programming language that you are trying to learn. </p>
+                                            <p>The Masschusetts Intitute of Technolog created an opensource courseware where students may take self-paced courses and attend lectures hosted by MIT professors. <a href="https://ocw.mit.edu/index.htm">MIT Open Courseware</a>                                                offers introductory post-secondary level courses for students to audit free of charge.</p>
                                             <p>The websites listed above are mostly for following a step-by-step course. Some people may find it structured and helpful, but others may feel restricted by the contents. Therefore, as a supplement, here are
                                                 some tips when researching for learning resources.</p>
                                             <b>Tip #1: Use open-source textbooks.</b>
