--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -599,7 +599,7 @@
                                     <li>By <span>Rayan Ramadan</span></li>
                                     <li>Research Projects</li>
                                 </ul>
-                                <h3><a href="blog_prion_disease.html">Protein Folding and Prion Diseases.</a></h3>
+                                <h3><a href="blog_prion_disease.html">How can Prion Diseases, propagated though the mis-folding of the prion protein, be targeted using antibodies, enzymes, and antigen-linking molecules, and how can molecular visualisation softwares help to build these molecules?</a></h3>
                                 <a href="blog_prion_disease.html" class="read-more ">Read more <span class="icon flaticon-right-arrow-1 "></span></a>
                             </div>
                         </div>
