--- a/Action_Potentials_Website_Self/blog.html
+++ b/Action_Potentials_Website_Self/blog.html
@@ -231,7 +231,7 @@
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="blog_prion_disease.html">Protein Folding and Prion Diseases</a></h3>
+                                                <h3><a href="blog_prion_disease.html">How can Prion Diseases, propagated though the mis-folding of the prion protein, be targeted using antibodies, enzymes, and antigen-linking molecules, and how can molecular visualisation softwares help to build these molecules?</a></h3>
                                                 <a href="blog_prion_disease.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
